--- a/glide.yaml
+++ b/glide.yaml
@@ -6,8 +6,6 @@ import:
   version: develop
 - package: github.com/tendermint/go-common
   version: develop
-- package: github.com/tendermint/go-config
-  version: develop
 - package: github.com/tendermint/go-crypto
   version: develop
 - package: github.com/tendermint/go-db
@@ -19,7 +17,7 @@ import:
 - package: github.com/tendermint/go-merkle
   version: develop
 - package: github.com/tendermint/go-p2p
-  version: develop
+  version: viper
 - package: github.com/tendermint/go-rpc
   version: develop
 - package: github.com/tendermint/go-wire
@@ -40,6 +38,7 @@ import:
 - package: github.com/gorilla/websocket
   version: ^1.1.0
 - package: github.com/spf13/cobra
+- package: github.com/spf13/viper
 - package: github.com/spf13/pflag
 - package: github.com/pkg/errors
   version: ^0.8.0
